--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,37 @@
 
     <groupId>ru.mcashesha</groupId>
     <artifactId>parallelism</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <array.type>double</array.type>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>float</id>
+            <properties>
+                <array.type>float</array.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>double</id>
+            <properties>
+                <array.type>double</array.type>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
