--- a/task_1/pom.xml
+++ b/task_1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.mcashesha</groupId>
-    <artifactId>parallelism</artifactId>
+    <artifactId>parallelism-task-1</artifactId>
     <version>1.0</version>
 
     <properties>
